encode the image url to asc ii string - solved thai url